cleanup, use friendly ci, sonar issues...